--- a/style.css
+++ b/style.css
@@ -115,14 +115,34 @@ main .donors {
     width: 40px;
     height: 40px; 
     position: absolute;
+
+    border-radius: 50%;
+    border-top-right-radius: 0;
     
+    transform: rotate(-45deg);
 }
+.donor p {
+    margin-top: auto;
+    padding: 16px;
 
-
+}
 footer{
     margin-top: auto;
     padding: 16px;
 
     border: 1px solid #eee;
     
+}
+
+section.form{
+    transition: all 300ms;
+}
+
+section.form.hide{
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+    margin-top: -70px;
+    
+
 }
